# limo_kante_ws

./: .gitignore  README.md
src/limo_ros/: README.md
src/limo_ros/docker_nano/: Readme.txt  compose_settings.txt  docker-compose-noGPU.yaml  docker-compose.yaml  docker_nano.txt
src/limo_ros/docker_pc/: README.md  docker-compose.pc.yaml  docker-compose.pc_old.yaml  docker-compose.pc_old2.yaml  pc-noetic.Dockerfile  pc-noetic_old.Dockerfile  usage.txt
src/limo_ros/kante_limo_apps/: CMakeLists.txt  package.xml  setup.py
src/limo_ros/kante_limo_apps/scripts/: lidar_avoid_person.py  mission_main.py  scripts.txt
src/limo_ros/kante_limo_apps/src/control/: pid.py
src/limo_ros/kante_limo_apps/src/mission/: mission_1.py  mission_2.py  mission_main.py
src/limo_ros/kante_limo_apps/src/sensor_per/: camera_birdview.py  lidar_avoidPerson.py
src/limo_ros/limo_bringup/launch/: limo_start.launch
src/limo_ros/limo_description/urdf/: limo_ackerman.xacro
src/limo_ros/limo_gazebo_sim/config/: pids.yaml
src/limo_ros/limo_gazebo_sim_ver2/: CMakeLists.txt  package.xml
src/limo_ros/limo_gazebo_utils/: CMakeLists.txt  package.xml
src/limo_ros/limo_gazebo_utils/launch/: launch.txt  limo_camera.launch  limo_rect_lidar.launch  limo_sensor.launch  limo_teleop.launch
src/limo_ros/limo_gazebo_utils/scripts/: limo_camera_view.py  limo_lidar_view.py  limo_teleop.py
src/limo_ros/limo_gazebo_utils/src/limo_control/: control_motor.py  control_pid.py
src/limo_ros/limo_gazebo_utils/src/limo_decision/: camera_dec_lane_curvature.py  camera_lane_decision.py  lidar_decision.py
src/limo_ros/limo_gazebo_utils/src/limo_perception/: camera_limo_kante.py  lidar_rect_roi_node.py
src/limo_ros/limo_gazebo_utils/src/mission/: mission_1.py  start_mission_lidar.py  start_mission_line.py
src/limo_ros/volumes/: launch_ros_drivers.sh
src/ydlidar_ros_driver/: install_tmp.txt
(+27 files in other folders)
