<?xml version="1.0"?>
<package format="2">
  <name>limo_gazebo_utils</name>
  <version>0.1.0</version>
  <description>Gazebo/ROS utils (camera view, lidar view, teleop) for LIMO</description>

  <maintainer email="root@todo.todo">root</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Build & Run deps -->
  <depend>rospy</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>

  <export/>
</package>
